[project]
name = "agent-tool-token-tracker"
version = "0.1.0"
description = "Capture token usage from LangChain LLM responses, surface totals by source/model, optional cost estimation from a pricing dict."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Moore" }]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["token_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
